# keychainpgp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRD.md  PRIVACY.md  README.md  SECURITY.md  SECURITY_TO_PATCH.md  SUPPORT.md  TERMS.md  audit.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-web.yml  release.yml
crates/keychainpgp-cli/: Cargo.toml
crates/keychainpgp-cli/src/: main.rs
crates/keychainpgp-cli/src/commands/: decrypt.rs  encrypt.rs  generate.rs  inspect.rs  keys.rs  mod.rs  sign.rs  verify.rs
crates/keychainpgp-clipboard/: Cargo.toml
crates/keychainpgp-clipboard/src/: clear.rs  detect.rs  error.rs  lib.rs  monitor.rs
crates/keychainpgp-core/: Cargo.toml
crates/keychainpgp-core/src/: armor.rs  engine.rs  error.rs  lib.rs  sequoia_engine.rs  types.rs
crates/keychainpgp-core/testdata/: export_openkeychain.sec.pgp
crates/keychainpgp-keys/: Cargo.toml
crates/keychainpgp-keys/src/: credential.rs  error.rs  export.rs  import.rs  keyring.rs  lib.rs  storage.rs  sync.rs
crates/keychainpgp-keys/src/network/: keyserver.rs  mod.rs  wkd.rs
crates/keychainpgp-keys/tests/: integration.rs
crates/keychainpgp-ui/: .gitignore  Cargo.toml  tauri.conf.json
crates/keychainpgp-ui/capabilities/: default.json  mobile.json
crates/keychainpgp-ui/frontend/: .prettierignore  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/keychainpgp-ui/frontend/messages/: ar.json  de.json  en.json  es.json  fr.json  he.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  pt-PT.json  ru.json  th.json  tr.json  uk.json  zh-CN.json  zh-TW.json
crates/keychainpgp-ui/frontend/project.inlang/: settings.json
crates/keychainpgp-ui/frontend/scripts/: sync-translations.cjs  sync-translations.test.cjs
crates/keychainpgp-ui/frontend/src/: App.svelte  app.css  app.html
crates/keychainpgp-ui/frontend/src/components/home/: ClipboardPreview.svelte  ComposeInput.svelte  HomeView.svelte
crates/keychainpgp-ui/frontend/src/components/keys/: KeyCard.svelte  KeyGenerateForm.svelte  KeysView.svelte
crates/keychainpgp-ui/frontend/src/components/layout/: NavBar.svelte  StatusBar.svelte
crates/keychainpgp-ui/frontend/src/components/modals/: ConfirmDialog.svelte  DecryptedViewer.svelte  DonateModal.svelte  ErrorDialog.svelte  KeyDetailsModal.svelte  KeyDiscoveryModal.svelte  KeyImportDialog.svelte  KeySyncExportModal.svelte  KeySyncImportModal.svelte  ModalContainer.svelte  PassphraseDialog.svelte  QrExportModal.svelte  RecipientSelector.svelte  RevokeKeyModal.svelte  VerifyResultModal.svelte
crates/keychainpgp-ui/frontend/src/components/onboarding/: OnboardingView.svelte
crates/keychainpgp-ui/frontend/src/components/settings/: SettingsView.svelte
crates/keychainpgp-ui/frontend/src/components/shared/: FingerprintDisplay.svelte  Kbd.svelte  LoadingSpinner.svelte  QrScanOverlay.svelte  SearchBar.svelte  TrustBadge.svelte
crates/keychainpgp-ui/frontend/src/lib/: hotkeys.ts  platform.ts  qr-scan.ts  tauri.ts  types.ts  utils.ts
crates/keychainpgp-ui/frontend/src/lib/stores/: app.svelte.ts  clipboard.svelte.ts  keys.svelte.ts  locale.svelte.ts  settings.svelte.ts
crates/keychainpgp-ui/icons/: icon.icns
crates/keychainpgp-ui/src/: hotkeys.rs  lib.rs  main.rs  passphrase_cache.rs  state.rs  tray.rs
crates/keychainpgp-ui/src/commands/: clipboard.rs  clipboard_mobile.rs  crypto.rs  keys.rs  mod.rs  opsec.rs  settings.rs  sync.rs
crates/keychainpgp-wasm/: Cargo.toml
crates/keychainpgp-wasm/src/: lib.rs
crates/keychainpgp-wasm/tests/: web.rs
scripts/: bump-version.ps1  bump-version.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/components/: DecryptView.svelte  EncryptView.svelte  KeyManager.svelte  Onboarding.svelte  SignView.svelte  VerifyView.svelte
web/src/lib/: i18n-types.ts  i18n.svelte.ts  i18n.ts  keystore.ts  preferences.ts  theme.ts  wasm.ts
web/src/locales/: ar.json  de.json  en.json  es.json  fr.json  he.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  pt-PT.json  ru.json  th.json  tr.json  uk.json  zh-CN.json  zh-TW.json
