[package]
name = "keychainpgp-core"
description = "Core OpenPGP cryptographic operations for KeychainPGP"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
wasm = []

[dependencies]
sequoia-openpgp.workspace = true
zeroize.workspace = true
subtle.workspace = true
secrecy.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "wasmbind"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile.workspace = true
anyhow.workspace = true
