[package]
name = "keychainpgp-ui"
description = "Tauri desktop application for KeychainPGP"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "keychainpgp-ui"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keychainpgp-core.workspace = true
keychainpgp-keys.workspace = true
keychainpgp-clipboard.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
secrecy.workspace = true
zeroize.workspace = true
qrcode.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
