[package]
name = "keychainpgp-wasm"
description = "WebAssembly bindings for KeychainPGP crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
keychainpgp-core = { path = "../keychainpgp-core", features = ["wasm"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
